--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  scoped_model: ^1.0.1
+  cloud_firestore: ^0.9.5+2
+  firebase_auth: ^0.8.1+3
+  progress_dialog: ^1.0.3
  
 
 dev_dependencies:
